--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,20 +1,33 @@
 .profile {
   margin: auto;
-  margin-top: 20px;
-  padding: 15px;
+  margin-top: 30px;
   width: 260px;
   height: 400px;
   background-color: white;
-  border-radius: 15px;
-
+  border-radius: 7px;
   text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow: hidden;
+  -webkit-box-shadow: 0px 1px 3px 0px rgba(128, 128, 128, 1);
+  -moz-box-shadow: 0px 1px 3px 0px rgba(128, 128, 128, 1);
+  box-shadow: 0px 1px 3px 0px rgba(128, 128, 128, 1);
+}
+
+.description {
+  width: 100%;
+  flex: 1;
+  padding-top: 35px;
 }
 .avatar {
-  width: 200px;
-  height: 200px;
+  width: 125px;
+  height: 125px;
+  border-radius: 50%;
+
+  -webkit-box-shadow: 0px 1px 3px 0px rgba(128, 128, 128, 1);
+  -moz-box-shadow: 0px 1px 3px 0px rgba(128, 128, 128, 1);
+  box-shadow: 0px 1px 3px 0px rgba(128, 128, 128, 1);
 }
 .name {
   font-size: 20px;
@@ -23,27 +36,43 @@
 .tag {
   font-size: 15px;
   font-weight: 300;
+  color: rgb(118, 118, 118);
 }
 .location {
   font-size: 15px;
   font-weight: 300;
+  color: rgb(118, 118, 118);
 }
 .stats {
+  width: 100%;
   padding: 0;
   display: flex;
-  gap: 10px;
+  justify-content: space-between;
+  height: 85px;
+  margin: 0;
+  border-top: 2px solid rgba(128, 128, 128, 0.15);
 }
 .item {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 4px
+  justify-content: center;
+  flex: 1;
+  background-color: rgb(246, 249, 251);
 }
+
+.item:nth-child(2) {
+  border-left: 2px solid rgba(128, 128, 128, 0.15);
+  border-right: 2px solid rgba(128, 128, 128, 0.15);
+}
+
 .label {
-    font-size: 15px;
-    font-weight: 300;
+  font-size: 15px;
+  font-weight: 400;
+  color: rgb(118, 118, 118);
+  margin-bottom: 5px;
 }
 .quantity {
-    font-size: 15px;
-    font-weight: 700;
+  font-size: 15px;
+  font-weight: 700;
 }
